--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT=5050
 CLIENT_URL=http://localhost:3000,https://www.sozly.me,https://sozly.me
 
 # Database Configuration
-MONGODB_URI=mongodb://moovly:20012912M.s@213.199.33.9:27017/voice-chat?authSource=admin
+MONGODB_URI=mongodb://moovly:20012912M.s@213.199.33.9:27017/voice-chat-production?authSource=admin
 
 # Clustering
 WORKERS=auto
