--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     ]
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/uuid": "^9.0.2",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "dotenv-expand": "^12.0.3",
